feat(api):generar tokens al ingresar un usuario válido genera el tokens

--- a/ApiClientes/appsettings.json
+++ b/ApiClientes/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": " Server=localhost; Database=ClienteDB; Trusted_Connection=True; MultipleActiveResultSets=True; TrustServerCertificate=true"
   },
+  "AppSettings": {
+    "Token": "Clave secreta de la aplicacion"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
